force-app/main/default/objects/Contact/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <description>Used to reassign Contact owner to Account owner.</description>
    <formula>Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>