force-app/main/default/objects/Contact/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>Used to compare Account Owner with Contact Owner, to sync them for consistency</description>
    <formula>Account.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>