force-app/main/default/objects/Contact/fields/Account_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Rep__c</fullName>
    <formula>TEXT(Account.Rep_Follow_up__c)</formula>
    <inlineHelpText>LU from the Account page</inlineHelpText>
    <label>Account Rep</label>
    <type>Text</type>
</CustomField>