force-app/main/default/objects/Contact/fields/Acquired_Today__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Today__c</fullName>
    <description>Used to sync new Contacts with Mailchimp.</description>
    <formula>IF (mkto71_Acquisition_Date__c = TODAY (), &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquired Today</label>
    <type>Text</type>
</CustomField>