force-app/main/default/objects/Contact/fields/Active_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Status_Date__c</fullName>
    <formula>Account.Active_Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Status Date</label>
    <type>Date</type>
</CustomField>