force-app/main/default/objects/Contact/fields/Agreement_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Cancel_Date__c</fullName>
    <label>Agreement Cancel Date</label>
    <type>Date</type>
</CustomField>