force-app/main/default/objects/Contact/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <label>Agreement Signed Date</label>
    <type>Date</type>
</CustomField>