force-app/main/default/objects/Contact/fields/Agreement_Status_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status_Contact__c</fullName>
    <label>HCP Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Send FAX</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed / Returned</fullName>
            </value>
            <value>
                <fullName>W-9 Only</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>No Stipend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>