force-app/main/default/objects/Contact/fields/Agreement_Type_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type_Contact__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>