force-app/main/default/objects/Contact/fields/Asset_Content_FT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_FT__c</fullName>
    <description>Used by Marketo Dept / Marketo</description>
    <label>Asset / Content (FT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>