force-app/main/default/objects/Contact/fields/Asset_Content_LT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_LT__c</fullName>
    <description>Used by Marketing Dept / Marketo</description>
    <label>Asset / Content (LT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>