force-app/main/default/objects/Contact/fields/Baby_is_born__c.field-meta.xml
<CustomField>
    <fullName>Baby_is_born__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to send status to Marketo for email smart list.</description>
    <label>Baby is born</label>
    <type>Checkbox</type>
</CustomField>