force-app/main/default/objects/Contact/fields/Baby_s_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Baby_s_Due_Date__c</fullName>
    <description>Used when returning clients fill out form. Sent to new Lead record.</description>
    <label>Baby&apos;s Due Date</label>
    <type>Date</type>
</CustomField>