force-app/main/default/objects/Contact/fields/Campaign_FT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_FT__c</fullName>
    <description>Used by Marketing Dept/Marketo</description>
    <label>Campaign (FT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>