force-app/main/default/objects/Contact/fields/Campaign_LT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_LT__c</fullName>
    <description>Used by Marketing Dept / Marketo</description>
    <label>Campaign (LT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>