force-app/main/default/objects/Contact/fields/CB_2_0_Stipend__c.field-meta.xml
<CustomField>
    <fullName>CB_2_0_Stipend__c</fullName>
    <label>CB 2.0 Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>350</fullName>
            </value>
            <value>
                <fullName>375</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>250</fullName>
                <isActive>false</isActive>
                <label>250</label>
            </value>
            <value>
                <fullName>425</fullName>
                <isActive>false</isActive>
                <label>425</label>
            </value>
            <value>
                <fullName>450</fullName>
                <isActive>false</isActive>
                <label>450</label>
            </value>
            <value>
                <fullName>475</fullName>
                <isActive>false</isActive>
                <label>475</label>
            </value>
            <value>
                <fullName>500</fullName>
                <isActive>false</isActive>
                <label>500</label>
            </value>
            <value>
                <fullName>550</fullName>
                <isActive>false</isActive>
                <label>550</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>