force-app/main/default/objects/Contact/fields/Channel_FT__c.field-meta.xml
<CustomField>
    <fullName>Channel_FT__c</fullName>
    <description>Used by Marketing Dept / Marketo</description>
    <label>Channel (FT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>