force-app/main/default/objects/Contact/fields/Commission_Created__c.field-meta.xml
<CustomField>
    <fullName>Commission_Created__c</fullName>
    <formula>Account.Commission_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Created</label>
    <type>Checkbox</type>
</CustomField>