force-app/main/default/objects/Contact/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <formula>Account.Commission_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>