force-app/main/default/objects/Contact/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>Used as a control number before de-duping for Outside Sales, June 2018.</description>
    <displayFormat>C-{00000}</displayFormat>
    <label>Contact Number</label>
    <type>AutoNumber</type>
</CustomField>