force-app/main/default/objects/Contact/fields/Count_Characters_temp__c.field-meta.xml
<CustomField>
    <fullName>Count_Characters_temp__c</fullName>
    <formula>LEN(  MailingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Characters temp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>