force-app/main/default/objects/Contact/fields/Count_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Count_Commissions__c</fullName>
    <description>Using Rollup Helper counts commission records that are not canceled nor denied.</description>
    <label>Count Commissions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>