force-app/main/default/objects/Contact/fields/Count_Referees_Amb__c.field-meta.xml
<CustomField>
    <fullName>Count_Referees_Amb__c</fullName>
    <description>This field is not used any more.</description>
    <label>Count Referees (Amb) OLD DO NOT USE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>