force-app/main/default/objects/Contact/fields/Create_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to create Opportunity for existing customers when they complete a form, nine months or more after previous enrollment. Triggered by Marketo. Used by Process Builder.</description>
    <label>Create New Opp</label>
    <type>Checkbox</type>
</CustomField>