force-app/main/default/objects/Contact/fields/Create_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Create_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this field is checked, a Portal Authentication record is created, which gives user access to the Client Services Portal.</inlineHelpText>
    <label>Create Portal Access</label>
    <type>Checkbox</type>
</CustomField>