force-app/main/default/objects/Contact/fields/CRMG_Map__Duplicated__c.field-meta.xml
<CustomField>
    <fullName>CRMG_Map__Duplicated__c</fullName>
    <label>Duplicated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>