force-app/main/default/objects/Contact/fields/CT_Stipend__c.field-meta.xml
<CustomField>
    <fullName>CT_Stipend__c</fullName>
    <label>CT Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>450</fullName>
                <isActive>false</isActive>
                <label>450</label>
            </value>
            <value>
                <fullName>500</fullName>
                <isActive>false</isActive>
                <label>500</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>