force-app/main/default/objects/Contact/fields/Dialpad__Powerdialer_Last_Dialed_via__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Powerdialer_Last_Dialed_via__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Powerdialer Last Dialed via</label>
    <referenceTo>Dialpad__Dialpad_LOAC__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>