force-app/main/default/objects/Contact/fields/Dialpad__Timezone__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Timezone__c</fullName>
    <label>Contact Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>