force-app/main/default/objects/Contact/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <inlineHelpText>Populated by Docusign, used for Inside Sales for phone call follow-up.</inlineHelpText>
    <label>DocuSign Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>