force-app/main/default/objects/Contact/fields/Drift_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Drift_Calendar__c</fullName>
    <description>Used in Marketo emails</description>
    <formula>Owner.Drift_Calendar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drift Calendar</label>
    <type>Text</type>
</CustomField>