force-app/main/default/objects/Contact/fields/Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Email_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>from marketo</inlineHelpText>
    <label>Email Invalid</label>
    <type>Checkbox</type>
</CustomField>