force-app/main/default/objects/Contact/fields/Enroll_Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Create_Date_Time__c</fullName>
    <description>Created for John Stieler for sales analysis</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Formula field that converts Create Date into Date &amp; Time</inlineHelpText>
    <label>Enroll (Create) Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>