force-app/main/default/objects/Contact/fields/Enroller__c.field-meta.xml
<CustomField>
    <fullName>Enroller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enroller</label>
    <type>Checkbox</type>
</CustomField>