force-app/main/default/objects/Contact/fields/Exclude_from_NYE_SMS__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_NYE_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are clients that should not be included in NYE SMS</description>
    <label>Exclude from NYE SMS</label>
    <type>Checkbox</type>
</CustomField>