force-app/main/default/objects/Contact/fields/FedEx_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Declared_Value__c</fullName>
    <defaultValue>30</defaultValue>
    <label>FedEx Declared Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>