force-app/main/default/objects/Contact/fields/FedEx_Height__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Height__c</fullName>
    <defaultValue>3.0</defaultValue>
    <label>FedEx Height</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>