force-app/main/default/objects/Contact/fields/FedEx_Length__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Length__c</fullName>
    <defaultValue>9.0</defaultValue>
    <label>FedEx Length</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>