force-app/main/default/objects/Contact/fields/FedEx_Package_Type__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Package_Type__c</fullName>
    <label>FedEx Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YOUR_PACKAGING</fullName>
                <default>true</default>
                <label>YOUR_PACKAGING</label>
            </value>
            <value>
                <fullName>FEDEX_10KG_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_25KG_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_ENVELOPE</fullName>
            </value>
            <value>
                <fullName>FEDEX_EXTRA_LARGE_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_LARGE_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_MEDIUM_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_PAK</fullName>
            </value>
            <value>
                <fullName>FEDEX_SMALL_BOX</fullName>
            </value>
            <value>
                <fullName>FEDEX_TUBE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>