force-app/main/default/objects/Contact/fields/FedEx_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>FedEx Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>