force-app/main/default/objects/Contact/fields/FedEx_Reference__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Reference__c</fullName>
    <defaultValue>&quot;Outreach Program&quot;</defaultValue>
    <label>FedEx Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>