force-app/main/default/objects/Contact/fields/FedEx_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Shipping_Method__c</fullName>
    <label>FedEx Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEDEX_GROUND</fullName>
                <default>true</default>
                <label>FEDEX_GROUND</label>
            </value>
            <value>
                <fullName>FEDEX_1_DAY_FREIGHT</fullName>
            </value>
            <value>
                <fullName>FEDEX_2_DAY</fullName>
            </value>
            <value>
                <fullName>FEDEX_2_DAY_AM</fullName>
            </value>
            <value>
                <fullName>FEDEX_2_DAY_FREIGHT</fullName>
            </value>
            <value>
                <fullName>FEDEX_3_DAY_FREIGHT</fullName>
            </value>
            <value>
                <fullName>FEDEX_EXPRESS_SAVER</fullName>
            </value>
            <value>
                <fullName>FEDEX_FIRST_FREIGHT</fullName>
            </value>
            <value>
                <fullName>FIRST_OVERNIGHT</fullName>
            </value>
            <value>
                <fullName>GROUND_HOME_DELIVERY</fullName>
            </value>
            <value>
                <fullName>PRIORITY_OVERNIGHT</fullName>
            </value>
            <value>
                <fullName>SMART_POST</fullName>
            </value>
            <value>
                <fullName>STANDARD_OVERNIGHT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>