force-app/main/default/objects/Contact/fields/FedEx_Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Shipping_Type__c</fullName>
    <label>FedEx Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OUTBOUND</fullName>
                <default>true</default>
                <label>OUTBOUND</label>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
            <value>
                <fullName>OUTBOUND_AND_RETURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>