force-app/main/default/objects/Contact/fields/FedEx_Weight__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Weight__c</fullName>
    <defaultValue>2.0</defaultValue>
    <label>FedEx Weight</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>