force-app/main/default/objects/Contact/fields/FedEx_Width__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Width__c</fullName>
    <defaultValue>4.0</defaultValue>
    <label>FedEx Width</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>