force-app/main/default/objects/Contact/fields/Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>Filter_Number__c</fullName>
    <description>Used for SMS Send by Report for more than 2K records. Remember to sort by this field. https://americord--tdc-tsw.na171.visual.force.com/apex/apex/tdc_tsw__Custom_Requirement</description>
    <displayFormat>{000000}</displayFormat>
    <label>Filter Number</label>
    <type>AutoNumber</type>
</CustomField>