force-app/main/default/objects/Contact/fields/First_CBO__c.field-meta.xml
<CustomField>
    <fullName>First_CBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to create a commission record when a referrer is added to the referee&apos;s contact record. It stores the first CBO.</description>
    <label>Last CBO</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>