force-app/main/default/objects/Contact/fields/fw1__Application_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Application_Fee_Amount__c</fullName>
    <label>Application Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>