force-app/main/default/objects/Contact/fields/fw1__Application_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>fw1__Application_Fee_Percentage__c</fullName>
    <label>Application Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>