force-app/main/default/objects/Contact/fields/fw1__Languages__c.field-meta.xml
<CustomField>
    <fullName>fw1__Languages__c</fullName>
    <label>zLanguages - OBSOLETE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>