force-app/main/default/objects/Contact/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <description>Used to flag Doctors, Midwives and RNs as &quot;HCP&quot; which is used in Flow for HCP Practice Agreements.</description>
    <formula>If (
OR (
ispickval(Type__c, &quot;Doctor&quot;),
ispickval(Type__c, &quot;Midwife&quot;),
ispickval(Type__c, &quot;RN&quot;)),
 true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP</label>
    <type>Checkbox</type>
</CustomField>