force-app/main/default/objects/Contact/fields/HCP_Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>HCP_Attachment_ID__c</fullName>
    <description>Used in automation of Fax for HCP Agreement.</description>
    <label>HCP Attachment ID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>