force-app/main/default/objects/Contact/fields/HCP_Status__c.field-meta.xml
<CustomField>
    <fullName>HCP_Status__c</fullName>
    <description>Used to determine if HCP record is Active.</description>
    <formula>IF (
AND(
OR ( 
text( Agreement_Status_Contact__c)= &quot;Signed / Returned&quot;,
text( Agreement_Status_Contact__c)= &quot;W-9 Only&quot;,
text( Agreement_Status_Contact__c)= &quot;No Stipend&quot;),
 Account.Ninety_Days_Activity__c &gt; 0), &quot;Active&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCP Status</label>
    <type>Text</type>
</CustomField>