force-app/main/default/objects/Contact/fields/Include_in_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Addendum</label>
    <type>Checkbox</type>
</CustomField>