force-app/main/default/objects/Contact/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <description>Used as a variable for NPS Surveys sent via Survey Monkey.</description>
    <label>Invoice Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>