force-app/main/default/objects/Contact/fields/Lab_ID__c.field-meta.xml
<CustomField>
    <fullName>Lab_ID__c</fullName>
    <description>Used to record Lab ID on Surrogate contact, used by Process Builder to move password to Lab page; used by Email Template to invite Surrogate to Portal for Docusign.</description>
    <label>Lab ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>