force-app/main/default/objects/Contact/fields/Last_Enroll_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Enroll_Date_2__c</fullName>
    <formula>First_CBO__r.Enroll_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Enroll Date 2</label>
    <type>Date</type>
</CustomField>