force-app/main/default/objects/Contact/fields/Last_Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Enroll_Date__c</fullName>
    <description>Used to control trigger in Marketo which controls trigger in SF to create new Opportunity for Returning Clients.</description>
    <label>Last Enroll Date</label>
    <type>Date</type>
</CustomField>