force-app/main/default/objects/Contact/fields/Last_Name_for_Letters__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_for_Letters__c</fullName>
    <description>Used by Outreach team for letters to doctors and office managers; this is a merge field with RS Documents.</description>
    <label>Last Name for Letters</label>
    <length>80</length>
    <type>Text</type>
</CustomField>