force-app/main/default/objects/Contact/fields/Mailchimp_Activity__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to import (into Marketo) opens and clicks from Mailchimp. This field gives visibility in SF.</description>
    <label>Mailchimp Activity</label>
    <type>Checkbox</type>
</CustomField>