force-app/main/default/objects/Contact/fields/Master_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify records that have been either reviewed or modified by the LSR, and should be used as the master during merging.</description>
    <label>Master Record</label>
    <type>Checkbox</type>
</CustomField>