force-app/main/default/objects/Contact/fields/Misc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Misc_Notes__c</fullName>
    <description>Used primarily by Outreach program for phone extensions and other misc notes.</description>
    <label>Misc Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>